--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,12 @@
   "rules": {
     "react/jsx-filename-extension": 0,
     "react/function-component-definition": 0,
-    "react/jsx-props-no-spreading": 0
+    "react/jsx-props-no-spreading": 0,
+    "import/extensions": 0,
+    "import/prefer-default-export": 0,
+
+    "@typescript-eslint/no-unsafe-member-access": 0,
+    "@typescript-eslint/no-unsafe-assignment": 0,
+    "@typescript-eslint/no-unsafe-call": 0
   }
 }
